--- a/_posts/2014-09-21-services-1.markdown
+++ b/_posts/2014-09-21-services-1.markdown
@@ -2,7 +2,7 @@
 layout: default
 img: ipad.png
 category: Services
-title: Death to the Stock Photo:<br>Special Thanks
+title: Pick of the day / Photo du jour:
 description: |
 ---
-  A special thanks to [Death to the Stock Photo](http://join.deathtothestockphoto.com/) for providing the photographs that you see in this template.  Visit their website to become a member!
+<br><h2>Aiguiser son regard</h2>
